--- a/Unity.Hotfix.csproj
+++ b/Unity.Hotfix.csproj
@@ -62,21 +62,18 @@
   <ItemGroup>
     <Compile Include="Assets\Hotfix\Core\Base\Log\Log.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Config\TBJump.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Object\Base\IFixedUpdate.cs" />
     <Compile Include="Assets\Hotfix\Runtime\UnOrderMultiMapSet.cs" />
     <Compile Include="Assets\Hotfix\Core\Utility\AssemblyUtility.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\EventPool\EventPoolMode.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\Variable\GenericVariable.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Object\AStarMap\AStarMap.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\SceneState\SceneStateManager.cs" />
     <Compile Include="Assets\Hotfix\Logic\SceneState\GameSceneState.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Extension\ObjectBase\ObjectBaseExtension.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Object\Base\IUpdate.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\Module.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Object\Base\ILateUpdate.cs" />
     <Compile Include="Assets\Hotfix\Logic\UI\Joystick\Joystick.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Audio\AudioManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Extension\Task\TaskExtension.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\AObjectBase\IFixedUpdate.cs" />
     <Compile Include="Assets\Hotfix\Core\ObjectPool\IObjectPoolManager.cs" />
     <Compile Include="Assets\Hotfix\Core\ObjectPool\ReleaseObjectFilterCallback.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\SceneState\SceneStateAttribute.cs" />
@@ -119,18 +116,18 @@
     <Compile Include="Assets\Hotfix\Runtime\Utility\Extension\Vector2\Vector2Extension.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Extension\UnityWebRequest\UnityWebRequestExtension.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Awaiter\AssetBundleCreateRequestAwaiter.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Object\AStarMap\AStarNodeData.cs" />
     <Compile Include="Assets\Hotfix\Core\Utility\MarshalUtility.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\AObjectBase\AttributeBase.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Panel\UI\IPanelHandler.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\EventArgs.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Manager\Global\GlobalManager.cs" />
     <Compile Include="Assets\Hotfix\Core\UI\UIManager.UIGroup.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Manager\Global\GlobalManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Model\ModelManager.cs" />
     <Compile Include="Assets\Hotfix\Core\UI\IUIGroup.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Panel\UI\UIPanel.cs" />
     <Compile Include="Assets\Hotfix\Core\ObjectPool\ObjectBase.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Manager\Panel\PanelType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Extension\Transform\TransformExtension.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Manager\Panel\PanelType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Extension\SpriteRenderer\SpriteRendererExtension.cs" />
     <Compile Include="Assets\Hotfix\Core\UI\OpenUIFormFailureEventArgs.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\LinkedList.cs" />
@@ -138,6 +135,7 @@
     <Compile Include="Assets\Hotfix\Runtime\Init\Init.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\MultiDictionary.cs" />
     <Compile Include="Assets\Hotfix\Core\UI\OpenUIFormSuccessEventArgs.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Manager\AStarMap\AStarMapManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Random\RandomUtility.cs" />
     <Compile Include="Assets\Hotfix\Core\UI\IUIForm.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Awaiter\Action\ActionWrap.cs" />
@@ -148,7 +146,6 @@
     <Compile Include="Assets\Hotfix\Runtime\Module\Time\Time.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Panel\UI\UIBinding.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\SceneState\SceneState.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Object\Base\AObjectBase.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Archive\ResolutionType.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\ReferencePool\ReferencePool.ReferenceCollection.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Archive\ArchiveManager.cs" />
@@ -157,6 +154,7 @@
     <Compile Include="Assets\Hotfix\Runtime\Manager\Panel\MVVM\View\Binding\Binding.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Archive\UserSetData.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\ReferencePool\ReferencePoolInfo.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Manager\AStarMap\AStarNodeData.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Object\Game.cs" />
     <Compile Include="Assets\Hotfix\Core\Resource\Constant.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\EventPool\EventPool.cs" />
@@ -165,6 +163,7 @@
     <Compile Include="Assets\Hotfix\Core\ObjectPool\IObjectPool.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Download\DownloadFile.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Config\Tables.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\AObjectBase\ILateUpdate.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\Variable\Variable.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Orca\OrcaManager.cs" />
     <Compile Include="Assets\Hotfix\Core\UI\IUIFormHelper.cs" />
@@ -187,23 +186,23 @@
     <Compile Include="Assets\Hotfix\Runtime\Manager\Video\VideoManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Archive\DisplayModeType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Singleton\ISingletonFixedUpdate.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\AObjectBase\AObjectBase.cs" />
     <Compile Include="Assets\Hotfix\Core\ObjectPool\ObjectPoolBase.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Model\ModelAttribute.cs" />
     <Compile Include="Assets\Hotfix\Core\ObjectPool\ObjectPoolManager.Object.cs" />
     <Compile Include="Assets\Hotfix\Core\UI\UIManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Jump\JumpManager.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\Entry.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Object\Pool\APool.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Object\ProtobufObject.cs" />
     <Compile Include="Assets\Hotfix\Logic\SceneState\MainSceneState.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\DataStruct\TypeNamePair.cs" />
     <Compile Include="Assets\Hotfix\Core\UI\IUIManager.cs" />
     <Compile Include="Assets\Hotfix\Core\ObjectPool\ObjectPoolManager.ObjectPool.cs" />
     <Compile Include="Assets\Hotfix\Core\UI\UIManager.UIGroup.UIFormInfo.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\AObjectBase\IUpdate.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Panel\MVVM\View\Binding\ViewModelBinding.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Singleton\Singleton.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Resolution\ResolutionUtility.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Object\GameObjectComponent.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Singleton\ISingleton.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Extension\Awaiter\AwaiterExtension.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Extension\GameObject\GameObjectExtension.cs" />
@@ -212,7 +211,6 @@
     <Compile Include="Assets\Hotfix\Runtime\Module\Timer\TimerData.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Command\CommandDataType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Download\DownloadData.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Object\Base\AttributeBase.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\ReferencePool\ReferencePool.cs" />
   </ItemGroup>
   <ItemGroup>
