--- a/Unity.Hotfix.csproj
+++ b/Unity.Hotfix.csproj
@@ -82,28 +82,24 @@
     <Compile Include="Assets\Hotfix\Runtime\HotfixBridge.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\RedDot\RedDotManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\AObjectBase\Game.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\MVVM\View\ViewModel\ViewModelBase.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Extension\Image\ImageExtension.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Coroutine\CoroutineHandler.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Extension\Vector3\Vector3Extension.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Module\EventSystem\EventSystem.cs" />
     <Compile Include="Assets\Hotfix\Core\ObjectPool\ObjectPoolManager.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\Log\LogLevel.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Module\MainThreadSynchronizationContext\MainThreadSynchronizationContext.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Language\LanguageType.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\Log\ILogHelper.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Command\CommandType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Id\IdUtility.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\SceneState\ISceneState.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Base\ShutdownType.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Manager\Panel\PanelManager.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Manager\MainThreadSynchronizationContext\MainThreadSynchronizationContext.cs" />
     <Compile Include="Assets\Hotfix\Core\Event\IEventManager.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Manager\Panel\MVVM\View\View\IView.cs" />
     <Compile Include="Assets\Hotfix\Core\UI\UIManager.OpenUIFormInfo.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Module\Timer\TimerType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Archive\CVType.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\EventPool\BaseEventArgs.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\SceneState\SceneStateType.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Manager\Panel\Panel.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\MVVM\View\Binding\ViewModelBinding.cs" />
     <Compile Include="Assets\Hotfix\Core\UI\CloseUIFormCompleteEventArgs.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Download\DownloadManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Coroutine\CoroutineCompletedHandler.cs" />
@@ -111,25 +107,21 @@
     <Compile Include="Assets\Hotfix\Runtime\Manager\Download\DownloadState.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Command\CommandData.cs" />
     <Compile Include="Assets\Hotfix\Runtime\ProtobufObject\ProtobufObject.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Module\Timer\Timer.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\LinkedListRange.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Utility\Extension\PanelType\PanelTypeExtension.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Manager\Panel\UI\UIComponent.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Extension\Vector2\Vector2Extension.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Extension\UnityWebRequest\UnityWebRequestExtension.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Awaiter\AssetBundleCreateRequestAwaiter.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Manager\HotfixType\HotfixTypeManager.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\MVVM\View\Binding\Binding.cs" />
     <Compile Include="Assets\Hotfix\Core\Utility\MarshalUtility.cs" />
     <Compile Include="Assets\Hotfix\Runtime\AObjectBase\AttributeBase.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Manager\Panel\UI\IPanelHandler.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\EventArgs.cs" />
     <Compile Include="Assets\Hotfix\Core\UI\UIManager.UIGroup.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Global\GlobalManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Model\ModelManager.cs" />
     <Compile Include="Assets\Hotfix\Core\UI\IUIGroup.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Manager\Panel\UI\UIPanel.cs" />
     <Compile Include="Assets\Hotfix\Core\ObjectPool\ObjectBase.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Extension\Transform\TransformExtension.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Manager\Panel\PanelType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Extension\SpriteRenderer\SpriteRendererExtension.cs" />
     <Compile Include="Assets\Hotfix\Core\UI\OpenUIFormFailureEventArgs.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\LinkedList.cs" />
@@ -145,15 +137,12 @@
     <Compile Include="Assets\Hotfix\Runtime\Manager\Model\ModelTemplate.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\ScreenAdaptation\ScreenAdaptationUtility.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Archive\UserData.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Module\Time\Time.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Manager\Panel\UI\UIBinding.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\SceneState\SceneState.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Archive\ResolutionType.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\ReferencePool\ReferencePool.ReferenceCollection.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Archive\ArchiveManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Awaiter\UnityWebRequestAsyncOperationAwaiter.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Network\NetworkUtility.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Manager\Panel\MVVM\View\Binding\Binding.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Archive\UserSetData.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\ReferencePool\ReferencePoolInfo.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\AStarMap\AStarNodeData.cs" />
@@ -164,17 +153,16 @@
     <Compile Include="Assets\Hotfix\Core\ObjectPool\IObjectPool.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Download\DownloadFile.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Config\Tables.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\MVVM\View\View\IView.cs" />
     <Compile Include="Assets\Hotfix\Runtime\AObjectBase\ILateUpdate.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\Variable\Variable.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Orca\OrcaManager.cs" />
     <Compile Include="Assets\Hotfix\Core\UI\IUIFormHelper.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Manager\MainThreadSynchronizationContext\ThreadSynchronizationContext.cs" />
     <Compile Include="Assets\Hotfix\Core\UI\UIManager.UIFormInstanceObject.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Manager\Manager\Manager.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Manager\Panel\MVVM\View\ViewModel\ViewModelBase.cs" />
     <Compile Include="Assets\Hotfix\Core\UI\IUIGroupHelper.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Awaiter\AssetBundleRequestAwaiter.cs" />
     <Compile Include="Assets\Hotfix\Core\Event\EventManager.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Module\MainThreadSynchronizationContext\ThreadSynchronizationContext.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\RedDot\RedDot.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Coroutine\CoroutineObject.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Language\LanguageManager.cs" />
@@ -182,7 +170,6 @@
     <Compile Include="Assets\Hotfix\Runtime\Manager\Command\CommandManager.cs" />
     <Compile Include="Assets\Hotfix\Core\ObjectPool\ObjectInfo.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\EventPool\EventPool.Event.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Base\GameEntry.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Video\VideoManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Archive\DisplayModeType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Singleton\ISingletonFixedUpdate.cs" />
@@ -199,15 +186,12 @@
     <Compile Include="Assets\Hotfix\Core\ObjectPool\ObjectPoolManager.ObjectPool.cs" />
     <Compile Include="Assets\Hotfix\Core\UI\UIManager.UIGroup.UIFormInfo.cs" />
     <Compile Include="Assets\Hotfix\Runtime\AObjectBase\IUpdate.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Manager\Panel\MVVM\View\Binding\ViewModelBinding.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Singleton\Singleton.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Resolution\ResolutionUtility.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Singleton\ISingleton.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Extension\Awaiter\AwaiterExtension.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Extension\GameObject\GameObjectExtension.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Singleton\ISingletonLateUpdate.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Base\Component.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Module\Timer\TimerData.cs" />
     <Compile Include="Assets\Hotfix\Runtime\AObjectBase\Scene.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Command\CommandDataType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Download\DownloadData.cs" />
