--- a/Unity.Hotfix.csproj
+++ b/Unity.Hotfix.csproj
@@ -62,26 +62,21 @@
   <ItemGroup>
     <Compile Include="Assets\Hotfix\Core\Base\Log\Log.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Config\TBJump.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\UnOrderMultiMapSet.cs" />
     <Compile Include="Assets\Hotfix\Core\Utility\AssemblyUtility.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\EventPool\EventPoolMode.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\Variable\GenericVariable.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\SceneState\SceneStateManager.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\AObjectBase\Root.cs" />
     <Compile Include="Assets\Hotfix\Logic\SceneState\GameSceneState.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Utility\Extension\ObjectBase\ObjectBaseExtension.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\Module.cs" />
     <Compile Include="Assets\Hotfix\Logic\UI\Joystick\Joystick.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Audio\AudioManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Extension\Task\TaskExtension.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\AObjectBase\IFixedUpdate.cs" />
     <Compile Include="Assets\Hotfix\Core\ObjectPool\IObjectPoolManager.cs" />
     <Compile Include="Assets\Hotfix\Core\ObjectPool\ReleaseObjectFilterCallback.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\SceneState\SceneStateAttribute.cs" />
     <Compile Include="Assets\Hotfix\Core\Event\GameEventArgs.cs" />
     <Compile Include="Assets\Hotfix\Runtime\HotfixBridge.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\RedDot\RedDotManager.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\AObjectBase\Game.cs" />
     <Compile Include="Assets\Hotfix\Runtime\MVVM\View\ViewModel\ViewModelBase.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Extension\Image\ImageExtension.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Coroutine\CoroutineHandler.cs" />
@@ -93,11 +88,11 @@
     <Compile Include="Assets\Hotfix\Runtime\Manager\Command\CommandType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Id\IdUtility.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\SceneState\ISceneState.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Manager\MainThreadSynchronizationContext\MainThreadSynchronizationContext.cs" />
     <Compile Include="Assets\Hotfix\Core\Event\IEventManager.cs" />
     <Compile Include="Assets\Hotfix\Core\UI\UIManager.OpenUIFormInfo.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Archive\CVType.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\EventPool\BaseEventArgs.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Manager\CodeTypes\AttributeBase.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\SceneState\SceneStateType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\MVVM\View\Binding\ViewModelBinding.cs" />
     <Compile Include="Assets\Hotfix\Core\UI\CloseUIFormCompleteEventArgs.cs" />
@@ -111,10 +106,8 @@
     <Compile Include="Assets\Hotfix\Runtime\Utility\Extension\Vector2\Vector2Extension.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Extension\UnityWebRequest\UnityWebRequestExtension.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Awaiter\AssetBundleCreateRequestAwaiter.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Manager\HotfixType\HotfixTypeManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\MVVM\View\Binding\Binding.cs" />
     <Compile Include="Assets\Hotfix\Core\Utility\MarshalUtility.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\AObjectBase\AttributeBase.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\EventArgs.cs" />
     <Compile Include="Assets\Hotfix\Core\UI\UIManager.UIGroup.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Global\GlobalManager.cs" />
@@ -138,6 +131,7 @@
     <Compile Include="Assets\Hotfix\Runtime\Utility\ScreenAdaptation\ScreenAdaptationUtility.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Archive\UserData.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\SceneState\SceneState.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Manager\CodeTypes\UnOrderMultiMapSet.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Archive\ResolutionType.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\ReferencePool\ReferencePool.ReferenceCollection.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Archive\ArchiveManager.cs" />
@@ -154,11 +148,9 @@
     <Compile Include="Assets\Hotfix\Runtime\Manager\Download\DownloadFile.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Config\Tables.cs" />
     <Compile Include="Assets\Hotfix\Runtime\MVVM\View\View\IView.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\AObjectBase\ILateUpdate.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\Variable\Variable.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Orca\OrcaManager.cs" />
     <Compile Include="Assets\Hotfix\Core\UI\IUIFormHelper.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Manager\MainThreadSynchronizationContext\ThreadSynchronizationContext.cs" />
     <Compile Include="Assets\Hotfix\Core\UI\UIManager.UIFormInstanceObject.cs" />
     <Compile Include="Assets\Hotfix\Core\UI\IUIGroupHelper.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Awaiter\AssetBundleRequestAwaiter.cs" />
@@ -170,10 +162,10 @@
     <Compile Include="Assets\Hotfix\Runtime\Manager\Command\CommandManager.cs" />
     <Compile Include="Assets\Hotfix\Core\ObjectPool\ObjectInfo.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\EventPool\EventPool.Event.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\ThreadSynchronizationContext\ThreadSynchronizationContext.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Video\VideoManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Archive\DisplayModeType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Singleton\ISingletonFixedUpdate.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\AObjectBase\AObjectBase.cs" />
     <Compile Include="Assets\Hotfix\Core\ObjectPool\ObjectPoolBase.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Model\ModelAttribute.cs" />
     <Compile Include="Assets\Hotfix\Core\ObjectPool\ObjectPoolManager.Object.cs" />
@@ -185,14 +177,13 @@
     <Compile Include="Assets\Hotfix\Core\UI\IUIManager.cs" />
     <Compile Include="Assets\Hotfix\Core\ObjectPool\ObjectPoolManager.ObjectPool.cs" />
     <Compile Include="Assets\Hotfix\Core\UI\UIManager.UIGroup.UIFormInfo.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\AObjectBase\IUpdate.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Singleton\Singleton.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Resolution\ResolutionUtility.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Singleton\ISingleton.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Extension\Awaiter\AwaiterExtension.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Extension\GameObject\GameObjectExtension.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Singleton\ISingletonLateUpdate.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\AObjectBase\Scene.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Manager\CodeTypes\CodeTypesManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Command\CommandDataType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Download\DownloadData.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\ReferencePool\ReferencePool.cs" />
